--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>GitHub Username Search</title>
-        <link rel="stylesheet" href="style.css" />
-        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="source/Css/style.css" />
+        <script src="source/Js/script.js" defer></script>
     </head>
     <body>
         <form id="form">
